@@ -28,11 +28,9 @@ library(BiocStyle)
 
 ## Update from previous stable versions
 
-`r Biocpkg("PureCN")` is fully backward compatible with input generated by
-versions 1.10, 1.12, 1.14, 1.16 and 1.18. However, 1.16 slightly changed the
-mapping bias database and incorporated the interval weights into the database directly.
-Simply re-create this RDS file to take advantage of the new features in case
-you upgrade from earlier versions:
+`r Biocpkg("PureCN")` is backward compatible with input generated by
+versions 1.16 and 1.18. For versions 1.8 to 1.14, please re-run `NormalDB.R`
+(see also below): 
 
 ```
 $ Rscript $PURECN/NormalDB.R --outdir $OUT_REF \
@@ -40,13 +38,9 @@ $ Rscript $PURECN/NormalDB.R --outdir $OUT_REF \
     --genome hg19 --normal_panel $NORMAL_PANEL --assay agilent_v6
 ```
 
-`r Biocpkg("PureCN")` 1.10 introduced a completely new normal database format with
-several important improvements such as not splitting the database by sample sex
-for the normalization of autosomes. It is therefore necessary (not only recommended)
-to re-run the `NormalDB.R` when upgrading from version 1.8. 
-
 For upgrades from version 1.6, we highly recommend starting from scratch
 following this tutorial.
+
 
 ## Installation
 
@@ -240,18 +234,20 @@ $ Rscript $PURECN/NormalDB.R --outdir $OUT_REF \
     --coveragefiles example_normal.list \
     --genome hg19 --assay agilent_v6
 
-# When normal panel VCF is available (highly recommended for unmatched samples)
+# When normal panel VCF is available (highly recommended for
+# unmatched samples)
 $ Rscript $PURECN/NormalDB.R --outdir $OUT_REF \
     --coveragefiles example_normal.list \
-    --genome hg19 --normal_panel $NORMAL_PANEL \
+    --normal_panel $NORMAL_PANEL \
+    --genome hg19 \
     --assay agilent_v6
 
 # For a Mutect2/GATK4 normal panel GenomicsDB (experimental)
 $ Rscript $PURECN/NormalDB.R --outdir $OUT_REF \
     --coveragefiles example_normal.list \
-    --genome hg19 $GENOMICSDB-WORKSPACE-PATH/pon_db \
+    --normal_panel $GENOMICSDB-WORKSPACE-PATH/pon_db \
+    --genome hg19 \
     --assay agilent_v6
-
 ```
 
 Important recommendations:
@@ -461,9 +457,9 @@ Important recommendations:
 ## Recommended _GATK4_ usage
 
 ```
-# Recommended: Provide a normal panel GenomicsDB to remove mapping biases,
-# pre-compute position-specific bias for much faster runtimes with large panels
-# This needs to be done only once for each assay. 
+# Recommended: Provide a normal panel GenomicsDB to remove mapping
+# biases, pre-compute position-specific bias for much faster runtimes
+# with large panels. This needs to be done only once for each assay. 
 Rscript $PURECN/NormalDB.R --outdir $OUT_REF \
     --normal_panel $GENOMICSDB-WORKSPACE-PATH/pon_db \
     --assay agilent_v6 --genome hg19 --force
@@ -474,8 +470,7 @@ Rscript $PURECN/PureCN.R --out $OUT/$SAMPLEID  \
     --logratiofile $OUT/$SAMPLEID/${SAMPLEID}.denoisedCR.tsv \
     --segfile $OUT/$SAMPLEID/${SAMPLEID}.modelFinal.seg \
     --mappingbiasfile $OUT_REF/mapping_bias_agilent_v6_hg19.rds \
-    --vcf ${SAMPLEID}_mutect.vcf \
-    --statsfile ${SAMPLEID}_mutect_stats.txt \
+    --vcf ${SAMPLEID}_mutect2_filtered.vcf \
     --snpblacklist hg19_simpleRepeats.bed \
     --genome hg19 \
     --funsegmentation Hclust \
@@ -495,17 +490,16 @@ and mutational signatures.
 grep CALLABLE ${SAMPLEID}_callable_status.bed > \ 
     ${SAMPLEID}_callable_status_filtered.bed
 
-# Only count mutations in callable regions, also subtract what was ignored
-# in PureCN.R via --snpblacklist, like simple repeats, from the mutation per 
-# megabase calculation
+# Only count mutations in callable regions, also subtract what was
+# ignored in PureCN.R via --snpblacklist, like simple repeats, from the
+# mutation per megabase calculation
 # Also search for the COSMIC mutation signatures
 # (http://cancer.sanger.ac.uk/cosmic/signatures)
 Rscript $PureCN/Dx.R --out $OUT/$SAMPLEID/$SAMPLEID \
     --rds $OUT/SAMPLEID/${SAMPLEID}.rds \
     --callable ${SAMPLEID}_callable_status_filtered.bed \
     --exclude hg19_simpleRepeats.bed \
-    --signatures \
-    --signature_databases signatures.exome.cosmic.v3.may2019
+    --signatures 
 
 # Restrict mutation burden calculation to coding sequences
 Rscript $PureCN/FilterCallableLoci.R --genome hg19 \
@@ -595,6 +589,7 @@ Argument name          | Corresponding PureCN argument | PureCN function
 `--normaldb`         | `normalDB` (serialized with `saveRDS`) | `calculateTangentNormal`, `filterTargets` 
 `--segfile`          | `seg.file`           | `runAbsoluteCN`  
 `--logratiofile`     | `log.ratio`          | `runAbsoluteCN`  
+`--additionaltumors` | `tumor.coverage.files` | `processMultipleSamples`  
 `--sex`              | `sex`                | `runAbsoluteCN`  
 `--genome`           | `genome`             | `runAbsoluteCN`  
 `--intervals`        | `interval.file`      | `runAbsoluteCN`   
